--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,5 @@
-doctype html
-html
-  head
-    meta(charset='utf-8')
-    title= title
-  body
-    h1= title
-    p Welcome to #{title}
+extends layout
+
+block content
+  h1= title
+  p Welcome to #{title}
